--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://valentineyoungman.github.io/food_delivery/",
+  "homepage": "https://valentineyoungman.github.io/food_delivery2/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,7 +14,6 @@
     "@types/react-dom": "^18.2.1",
     "ahooks": "^3.7.7",
     "axios": "^1.4.0",
-    "gh-pages": "^5.0.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
@@ -52,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
